# nolan-vm

./: .clang-format  .gitignore  README.md  build.zig  build.zig.zon  justfile  meson.build
include/: darr.h  gc.hpp  nolanvm.h  util.h  util.hpp  value.hpp  vm.hpp
include/util/: arena.h  darr.h
old-src/old/src/: util.cpp
old-src/src/: gc.h  main.c  utf8.h  value.c
old/include/: value.hpp  vm.hpp
old/src/: gc.cpp  value.cpp  vm.cpp
src/: darr.c  darr.h  gc.c  gc.cpp  le.c  main.c  main.cpp  main.zig  utf8.c  utf8.h  util.c  util.cpp  value.c  value.cpp  value.h  vm.cpp
src/util/: darr.c  le.c
